log/build_2024-08-28_08-27-27/ur3/stderr.log
  File "/home/saba/workspaces/ramen_robot_ws/install/ur3/lib/python3.10/site-packages/ur3/ur3_negi_node.py", line 119
    elif self.posN == 4 and self._negi_depth < 0.500:
    ^^^^
SyntaxError: invalid syntax

